fix: use css to align lower text dates

--- a/src/gantt.css
+++ b/src/gantt.css
@@ -89,6 +89,7 @@
         font-size: 14px;
         position: absolute;
         width: fit-content;
+        transform: translateX(-50%);
     }
 
     & .upper-text {
